Add paynet md skeleton

--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,13 @@
 {
-    "name": "cornel/paynet",
+    "name": "paymentmd/paynet",
     "autoload": {
         "psr-4": {
-            "Paymentmd\\Paynet\\": "packages/paymentmd/paynet/src"
+            "Paymentmd\\Paynet\\": "src/"
         }
     },
     "classmap": [
         "database/seeds",
         "database/factories"
     ],
-    "require": {},
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/demon17/greetr"
-        }
-    ]
+    "require": {}
 }
