Fix composer json config 2

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "demon17/paymentmd",
+    "name": "paymentmd/paynet",
     "description": "Paynet Md Package",
     "type": "project",
     "license": "MIT",
